"""Multi-Joint dynamics with Contact. A general purpose physics simulator."""

module(name = "mujoco", version = "3.2.6")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
bazel_dep(name = "platforms", version = "0.0.11")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
python.override(minor_mapping = {
    "3.12": "3.12.7",
    "3.11": "3.11.9",
})
use_repo(
    python,
    "pythons_hub",
    python = "python_versions",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_requirement_cycles = {
        # These are transitive dependencies of `matplotlib`.
        "markdown": [
            "markdown-it-py",
            "mdit-py-plugins",
        ],
    },
    hub_name = "pypi",
    python_version = "3.11",
    requirements_by_platform = {
        "@mujoco//python:pip_requirements.txt": "linux_*",
        # "requirements.macos_arm64.txt": "osx_*",
    },
)
use_repo(pip, "pip_deps")
