load("@mujoco//tools:def.bzl", "mj_cc_library")

package(default_visibility = ["@mujoco//:__subpackages__"])

mj_cc_library(
    name = "touch_grid",
    srcs = [
        "register.cc",
        "touch_grid.cc",
        "touch_stress.cc",
    ],
    hdrs = [
        "touch_grid.h",
        "touch_stress.h",
    ],
    deps = [
        "//:mujoco_hdrs",
    ],
    alwayslink = True,
)

cc_shared_library(
    name = "sensor",
    dynamic_deps = [
        "//:mujoco_shared",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "touch_grid",
    ],
)
