package(default_visibility = ["@mujoco//:__subpackages__"])

filegroup(
    name = "model",
    srcs = glob([
        "**/*.xml",
        "**/*.stl",
        "**/*.obj",
        "**/*.png",
    ]) + glob([
        "**/*.msh",  # TODO(hartikainen): why no files?
        "**/*.usda",  # TODO(hartikainen): why no files?
    ], allow_empty = True),
)
